package org.poo.service;

public interface NotificationService {
    void enviar(String telefone, String mensagem);
}
