@startuml

class Endereco {
  - logradouro : String
  - numero : String
  - complemento : String
  - bairro : String
  - cidade : String
  - estado : String
  - cep : String
  + Endereco()
  + Endereco(String, String, String, String, String, String, String)
  + static builder() : Builder
}

class "Endereco.Builder" as EnderecoBuilder {
  + logradouro(String) : Builder
  + numero(String) : Builder
  + complemento(String) : Builder
  + bairro(String) : Builder
  + cidade(String) : Builder
  + estado(String) : Builder
  + cep(String) : Builder
  + build() : Endereco
}

abstract class Pessoa {
  - id : Long
  - nome : String
  - telefone : String
  - email : String
  - dataCadastro : LocalDateTime
  + Pessoa()
}

class Cliente {
  - documentoIdentidade : String
  - documentoHabilitacao : String
  - endereco : Endereco
  - ativo : boolean
  + static builder() : Builder
}

class "Cliente.Builder" as ClienteBuilder {
  + nome(String) : Builder
  + telefone(String) : Builder
  + email(String) : Builder
  + documentoIdentidade(String) : Builder
  + documentoHabilitacao(String) : Builder
  + endereco(Endereco) : Builder
  + ativo(boolean) : Builder
  + build() : Cliente
}

class Funcionario {
  - matricula : String
  - cargo : Cargo
  - username : String
  - password : String
  - unidade : Unidade
  - ativo : boolean
  + static builder() : Builder
}

class "Funcionario.Builder" as FuncionarioBuilder {
  + nome(String) : Builder
  + telefone(String) : Builder
  + email(String) : Builder
  + matricula(String) : Builder
  + cargo(Cargo) : Builder
  + username(String) : Builder
  + password(String) : Builder
  + unidade(Unidade) : Builder
  + ativo(boolean) : Builder
  + build() : Funcionario
}

enum Cargo {
  GERENTE
  SUPERVISOR
  ATENDENTE
}

class AuthenticationToken {
  - token : UUID
  - funcionario : Funcionario
  - expiraEm : long
}

class Unidade {
  - id : Long
  - nomeUnidade : String
  - endereco : Endereco
  - veiculos : List<Veiculo>
  + Unidade()
  + static builder() : Builder
}

class "Unidade.Builder" as UnidadeBuilder {
  + nomeUnidade(String) : Builder
  + endereco(Endereco) : Builder
  + build() : Unidade
}

abstract class Veiculo {
  - id : Long
  - marca : String
  - modelo : String
  - ano : Integer
  - placa : String
  - chassi : String
  - kmAtual : Double
  - status : StatusVeiculo
  - unidade : Unidade
  - dataCadastro : LocalDateTime
  - atualizadoEm : LocalDateTime
  - ativo : boolean
  + Veiculo()
}

enum StatusVeiculo {
  DISPONIVEL
  LOCADO
  EM_MANUTENCAO
  DESATIVADO
}

class CarroPopular {
  - quantidadePortas : int
  - temArCondicionado : boolean
  + static builder() : Builder
}

class "CarroPopular.Builder" as CarroPopularBuilder {
  + marca(String) : Builder
  + modelo(String) : Builder
  + ano(Integer) : Builder
  + placa(String) : Builder
  + chassi(String) : Builder
  + kmAtual(Double) : Builder
  + unidade(Unidade) : Builder
  + quantidadePortas(int) : Builder
  + temArCondicionado(boolean) : Builder
  + build() : CarroPopular
}

class Motocicleta {
  - cilindrada : int
  - temBau : boolean
  + static builder() : Builder
}

class "Motocicleta.Builder" as MotocicletaBuilder {
  + marca(String) : Builder
  + modelo(String) : Builder
  + ano(Integer) : Builder
  + placa(String) : Builder
  + chassi(String) : Builder
  + kmAtual(Double) : Builder
  + unidade(Unidade) : Builder
  + cilindrada(int) : Builder
  + temBau(boolean) : Builder
  + build() : Motocicleta
}

class Manutencao {
  - id : Long
  - veiculo : Veiculo
  - dataInicio : LocalDateTime
  - dataFim : LocalDateTime
  - descricao : String
  - custo : Double
  - tipo : TipoManutencao
  + Manutencao()
  + static builder() : Builder
}

enum TipoManutencao {
  PREVENTIVA
  CORRETIVA
  PREDITIVA
}

class "Manutencao.Builder" as ManutencaoBuilder {
  + veiculo(Veiculo) : Builder
  + descricao(String) : Builder
  + custo(Double) : Builder
  + tipo(TipoManutencao) : Builder
  + dataFim(LocalDateTime) : Builder
  + build() : Manutencao
}

class Contrato {
  - id : Long
  - cliente : Cliente
  - veiculo : Veiculo
  - unidadeRetirada : Unidade
  - unidadeDevolucao : Unidade
  - dataInicio : LocalDateTime
  - dataFimPrevista : LocalDateTime
  - dataFimReal : LocalDateTime
  - valorDiaria : Double
  - valorTotal : Double
  - status : StatusContrato
  - kmInicial : Double
  - kmFinal : Double
  - formaPagamento : String
  + Contrato()
  + static builder() : Builder
}

enum StatusContrato {
  ATIVO
  FINALIZADO
  CANCELADO
}

class "Contrato.Builder" as ContratoBuilder {
  + cliente(Cliente) : Builder
  + veiculo(Veiculo) : Builder
  + unidadeRetirada(Unidade) : Builder
  + unidadeDevolucao(Unidade) : Builder
  + dataFimPrevista(LocalDateTime) : Builder
  + valorDiaria(Double) : Builder
  + kmInicial(Double) : Builder
  + formaPagamento(String) : Builder
  + dataInicio(LocalDateTime) : Builder
  + status(StatusContrato) : Builder
  + build() : Contrato
}

Pessoa <|-- Cliente
Pessoa <|-- Funcionario
Funcionario "1" -- "1" Cargo
Funcionario "0..*" -- "0..1" Unidade : trabalha em >
AuthenticationToken "0..*" -- "1" Funcionario
Unidade "1" -- "1" Endereco
Cliente "1" -- "0..1" Endereco
Unidade "1" -- "0..*" Veiculo : gerencia >
Veiculo <|-- CarroPopular
Veiculo <|-- Motocicleta
Veiculo "1" -- "1" StatusVeiculo
Veiculo "1" -- "0..*" Manutencao : submetido a >
Manutencao "1" -- "1" TipoManutencao
Cliente "1" -- "0..*" Contrato : realiza >
Veiculo "1" -- "0..*" Contrato : possui histórico em >
Contrato "1" -- "1" StatusContrato
Unidade "0..*" -- "1" Contrato : retirada >
Unidade "0..*" -- "0..1" Contrato : devolução >
Endereco +-- EnderecoBuilder
Cliente +-- ClienteBuilder
Funcionario +-- FuncionarioBuilder
Unidade +-- UnidadeBuilder
CarroPopular +-- CarroPopularBuilder
Motocicleta +-- MotocicletaBuilder
Manutencao +-- ManutencaoBuilder
Contrato +-- ContratoBuilder

interface NotificationService {
  + enviar(String, String) : void
}

record NotificacaoEvent {
  + telefone : String
  + mensagem : String
  + tipo : TipoEvento
}

enum TipoEvento {
  CONTRATO_ABERTO
  CONTRATO_ENCERRADO
  MANUTENCAO_AGENDADA
}

class WhatsappService {
  + enviar(String, String) : void
  + onEvento(NotificacaoEvent) : void
}

WhatsappService ..|> NotificationService
WhatsappService ..> NotificacaoEvent : <<@EventListener>>
NotificacaoEvent +-- TipoEvento
Contrato ..> NotificacaoEvent : publica >

@enduml
